fix blurry font on card issue

--- a/src/style.css
+++ b/src/style.css
@@ -236,19 +236,22 @@ div {
 
 #card-player-name {
   font-weight: 700;
-  margin-bottom: 1.5vw; /* 20px */
-  font-size: min(1.5vw, 3vh); /*  */
+  margin-bottom: 3vw; /*  */
+  font-size: min(3vw, 6vh); /*  */
 }
 
 #card-player-subtitle {
-  margin-top: min(0.375vw, 0.75vh); /* 5px */
+  margin-top: min(0.75vw, 1.5vh); /* 5px */
 }
 
 #card-text,
 #card-position-change-text,
 #card-close-button,
 #card-player-subtitle {
-  font-size: min(0.75vw, 1.5vh);
+  font-size: min(1.5vw, 3vh);
+  line-height: 1.3;
+  margin-right: min(1.5vw, 3vh);
+  margin-left: min(1.5vw, 3vh);
 }
 
 #card-position-change-text {
@@ -314,6 +317,10 @@ div {
   background-color: purple;
   position: absolute;
   transition: top 0.5s ease, left 0.5s ease, transform 0.5s ease;
+}
+
+.card-selection-option.focused {
+  transition: top 0.5s ease, left 0.5s ease, transform 0.5s ease, width 0.5s ease, height 0.5s ease;
 }
 
 .flip-card-front,
@@ -659,13 +666,19 @@ button {
     padding: min(2vw, 4vh);
   }
 
+  #card-player-name {
+    margin-bottom: min(1vw, 2vh);
+  }
+
   #card-text,
   #card-position-change-text,
   #card-close-button,
   #card-player-subtitle,
   #card-text i {
-    font-size: min(0.9vw, 1.8vh);
-    line-height: 1.5;
+    font-size: min(1.5vw, 3vh);
+    margin-left: min(1vw, 2vh);
+    margin-right: min(1vw, 2vh);
+    line-height: 1.3;
   }
 
   /* BUTTONS */
